Bug 673080 - Dropping a link on Firefox from an external program has no effect. r=neil