widget/src/windows/nsNativeDragTarget.h
@@ -102,16 +102,16 @@ public:
 
 protected:
 
-  void GetGeckoDragAction(LPDATAOBJECT pData, DWORD grfKeyState,
-                          LPDWORD pdwEffect, PRUint32 * aGeckoAction);
-  void ProcessDrag(LPDATAOBJECT pData, PRUint32 aEventType, DWORD grfKeyState,
+  void GetGeckoDragAction(DWORD grfKeyState, LPDWORD pdwEffect, 
+                          PRUint32 * aGeckoAction);
+  void ProcessDrag(PRUint32 aEventType, DWORD grfKeyState,
                    POINTL pt, DWORD* pdwEffect);
   void DispatchDragDropEvent(PRUint32 aType, POINTL pt);
 
   // Native Stuff
   ULONG            m_cRef;      // reference count
   HWND             mHWnd;
-  PRBool           mCanMove;
+  DWORD            mEffect;
   PRBool           mMovePreferred;
   PRBool           mTookOwnRef;
 
